finished createChat with transaction
